# Customer_chatbot_analysis

./: README.md  SkyRocket Data_GenAI.xlsx
skyrocket-netomi-submission/: .gitignore  README.md  pyproject.toml  requirements.txt
skyrocket-netomi-submission/config/prompts/: cluster_naming.txt  entity_extraction.txt  llm_judge.json  topic_classification_few_shot.txt
skyrocket-netomi-submission/data/: entity_extraction_results_20251130_161208.json  entity_extraction_results_20251203_000544.json  genai_responses.csv  llm_judge_evaluations_20251130_161406.csv  llm_judge_results_20251130_161406.json  queries.csv  topic_discovery_results.json
skyrocket-netomi-submission/docs/: DATA_EXPLANATION.md  INSTALLATION_SUCCESS.md  QUICK_START.md
skyrocket-netomi-submission/docs/webapp/: INSTALLATION.md  QUICKSTART.md  WEBAPP_SUMMARY.md
skyrocket-netomi-submission/scripts/: setup.bat  start_webapp.bat
skyrocket-netomi-submission/src/skyrocket/core/: entity_extractor.py  llm_judge.py  topic_classifier.py  topic_discovery.py
skyrocket-netomi-submission/src/skyrocket/data/: prepare_data.py  synthetic_data.py
skyrocket-netomi-submission/src/skyrocket/pipelines/: daily_etl_prefect.py
skyrocket-netomi-submission/webapp/: README.md
skyrocket-netomi-submission/webapp/backend/: app.py  pdf_generator.py
skyrocket-netomi-submission/webapp/backend/results/: latest_analysis.json
skyrocket-netomi-submission/webapp/frontend/: app.js  index.html  styles.css
